Resize cells to stop overflow

--- a/css/website.css
+++ b/css/website.css
@@ -14,8 +14,8 @@
 	max-height: 30px;
 	max-width: 30px;
 
-	height: 4vw;
-	width: 4vw;
+	/*height: 4vw;*/
+	/*width: 4vw;*/
 
 	display: inline-block;
 	float: left;
@@ -45,7 +45,7 @@
 	background-color: #e0e0e0;
 }
 .current {
-	background-color: #b053db !important;
+	background-color: #b053db;
 }
 .path {
 	background-color: #000000 !important
